# fluffer

./: .gitignore  Cargo.toml  cert.pem  changelog.md  key.pem  readme.md
examples/: admin.rs  app_state.rs  as_gemtext.rs  cert.rs  dice.rs  embed.rs  embeds.rs  errors.rs  file.rs  http.rs  identity.rs  language.rs  mult.rs  render.rs  static.rs  url.rs
src/: app.rs  as_gemtext.rs  client.rs  context.rs  err.rs  error.rs  fluff.rs  gem_bytes.rs  gem_call.rs  interactive.rs  lib.rs
static/: file.rs
