[package]
name = "fluffer"
description = "Fluffer 🦊 is an experimental crate that aims to make writing Gemini apps fun and easy."
homepage = "https://github.com/catb00mer/fluffer"
repository = "https://github.com/catb00mer/fluffer"
version = "0.6.1"
edition = "2021"
authors = ["catboomer"]
readme = "readme.md"
license = "GPL-3.0-only"
keywords = ["gemini"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
log = "0.4.20"
matchit = "0.7.3"
mime_guess = "2.0.4"
openssl = "0.10.57"
rcgen = "0.11.3"
reqwest = "0.11.22"
sanitize-filename = "0.5.0"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["net", "macros", "io-std", "rt-multi-thread"] }
tokio-openssl = "0.6.3"
url = "2.4.1"
urlencoding = "2.1.3"

[dev-dependencies]
fluffer = { path = "." }
rand = "0.8.5"
pretty_env_logger = "0.5.0"
